updated version of NMDC tutorial

--- a/tutorials/R/NMDC_NEON_Workshop_ESA2023/neon_data_for_metagenomics.html
+++ b/tutorials/R/NMDC_NEON_Workshop_ESA2023/neon_data_for_metagenomics.html
@@ -101,6 +101,7 @@ the RStudio IDE to work with R.</p>
 <li><strong>neonUtilities</strong>: Basic functions for accessing NEON data</li>
 <li><strong>neonOS</strong>: Functions for common data wrangling needs for NEON observational data</li>
 <li><strong>tidyverse</strong>: <a href="https://www.tidyverse.org/" target="_blank"> A collection of R packages</a> designed for data science</li>
+<li><strong>respirometry</strong> A package that includes a function to average pH data</li>
 </ul>
 <p>All of these packages can be installed from CRAN:</p>
 <pre><code>install.packages(&quot;neonUtilities&quot;)
@@ -147,7 +148,7 @@ of setting the working directory in R can be found here.</a></p>
 <h2 id="neon-metadata-for-metagenomic-data">NEON metadata for metagenomic data</h2>
 <h3 id="downloading-data-with-neonutilities">Downloading data with neonUtilities</h3>
 <p>The metagenomics data available on the NEON website includes only the raw sequence files. The sample data available through the NMDC website have been processed through the NMDC Edge pipeline, and include taxonomic and functional genomic information. However, the NEON samples collected for metagenomic sequencing were also subjected to a wide range of measurements, including carbon and nitrogen isotopes, soil temperature, and pH. The following examples will help you to annontate the functional and taxonomic information of NEON samples on the NMDC data portal so they can be analyzed along with all other NEON data from the soil and aquatic samples.</p>
-<p>We will start by accessing some soil chemical and physical measurements using the neonUtilities package. But even though we will be using R to do this, it is still useful to look up the information on the NEON Data Portal. Go back to the <a href="https://data.neonscience.org/data-products/explore" target="_blank">Explore Data Products page</a>, reset all filters, then type in “Soil physical and chemical properties” in the Search bar. Scroll down and click on “Soil physical and chemical properties, periodic” (DP1.10086.001).</p>
+<p>We will start by accessing some soil chemical and physical measurements using the neonUtilities package. Though we will be using R to do this, it is still useful to look up the information on the NEON Data Portal. Go back to the <a href="https://data.neonscience.org/data-products/explore" target="_blank">Explore Data Products page</a>, reset all filters, then type in “Soil physical and chemical properties” in the Search bar. Scroll down and click on “Soil physical and chemical properties, periodic” (DP1.10086.001).</p>
 <p>With the information from the Data Portal, we can download this data product using the <strong>neonUtilities</strong> package. We will start with a subset of terrestrial sites. Go ahead and set up the following command in a text file in RStudio or text editor.</p>
 <pre><code>library(neonUtilities)
 
@@ -170,10 +171,8 @@ soilChem &lt;- loadByProduct(
   site = soilTrialSites,
 
   package='expanded')
-
-View(soilChem$sls_metagenomicsPooling)
 </code></pre>
-<p>For full details on the <code>loadByProduct()</code> function, see the <a href="https://www.neonscience.org/resources/learning-hub/tutorials/neondatastackr" target="_blank">‘Use the neonUtilities Package’ tutorial</a>. Here we will just note some of the parameters. The <code>dpID</code> parameters is taken right from the Data Portal page for that data product. The <code>startdate</code> and <code>enddate</code> define the time range, and for the <code>site</code> parameter, we can enter a list of the four-letter codes for each site. The <code>check.size</code> we are leaving as <code>FALSE</code>, to prevent the function from warning us before big downloads. If you are going to do a big download, for example, if you do not specify a time range with <code>startdate/enddate</code> or define the sites to download using the <code>site</code> parameter, it is a good idea to leave this option at <code>TRUE</code>. If you are incorporating this code into a script as part of a pipeline, for example, then you should set this at <code>FALSE</code>.</p>
+<p>For full details on the <code>loadByProduct()</code> function, see the <a href="https://www.neonscience.org/resources/learning-hub/tutorials/neondatastackr" target="_blank">‘Use the neonUtilities Package’ tutorial</a>. Here we will just note some of the parameters. The <code>dpID</code> parameters is taken right from the Data Portal page for that data product. The <code>startdate</code> and <code>enddate</code> define the time range, and for the <code>site</code> parameter, we can enter a list of the four-letter codes for each site. The <code>check.size</code> we are leaving as <code>FALSE</code>, to prevent the function from warning us before big downloads. For example, if you do not specify a time range with <code>startdate/enddate</code> or define the sites to download using the <code>site</code> parameter, this will be a much bigger download and it is a good idea to leave this option at <code>TRUE</code>. If you are incorporating this code into a script as part of a pipeline, for example, then you should set this at <code>FALSE</code>.</p>
 <br/>
 <h3 id="viewing-the-data">Viewing the data</h3>
 <p>Once you have run this code and downloaded the data, we can have a look. The object returned by <code>loadByProduct()</code> function is a named list of data frames. To view or access each one, you can select them from the list of data frames using the <code>$</code> operator. For example, if we would like to view the table <code>sls_soilChemistry</code> table in RStudio, then we can use the <code>View()</code> function:</p>
@@ -248,6 +247,14 @@ combinedTab &lt;- left_join(genSampleExample,chemEx, by = &quot;sampleID&quot;) 
 
 View(combinedTab)
 </code></pre>
+<figure class="half">
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/nmdc_neon/combinedTab.png">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/nmdc_neon/combinedTab.png"
+    alt="">
+    </a>
+    <figcaption></figcaption>
+</figure>
+<br/>
 <h3 id="merging-metadata-around-composite-samples">Merging metadata around composite samples</h3>
 <p>We now have a table that includes the genetic subsamples and their corresponding biogeochemical measurements. However, if we want to compare the biogeochemical data directly with the metagenomic genomic samples, you may want to merge the rows in the table back to a single row for each composite sample. This means we will need to average the chemical measurements across the subsamples for each composite sample. Care must be taken, however, when averaging across certain measurements (see in particular the example for averaging pH, below). Here is a basic example for our table:</p>
 <pre><code>genome_groups &lt;- combinedTab %&gt;%
@@ -260,6 +267,13 @@ View(combinedTab)
 
 View(genome_groups)
 </code></pre>
+<figure class="half">
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/nmdc_neon/genome_groups.png">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/nmdc_neon/genome_groups.png"
+    alt="">
+    </a>
+    <figcaption></figcaption>
+</figure>
 <p>You now have a table that you can use to analyze your metagenomic data with some of the biogeochemical data. Hopefully the few examples on this page can help you get started. Please let us know if there is a particular type of data you are interested in analyzing with the metagenomic data and we will add to this page (or similar).</p>
 <br/>
 <br/>
@@ -374,7 +388,7 @@ urls_fordownload &lt;- unique(rawfiles_ids$rawDataFilePath)
 
 urls_fordownload &lt;- unique(rawFileInfo$rawDataFilePath)[1:20] #for instance, the first 20 rows, and so on
 </code></pre>
-<p>now write the urls to a text file</p>
+<p>Now write the urls to a text file</p>
 <pre><code>#put in whatever working directory you want
 
 file_conn = file(&quot;./NEONmetagenome_downloadIDs.txt&quot;) 
@@ -383,7 +397,7 @@ writeLines(unlist(urls_fordownload), file_conn, sep=&quot;\n&quot;)
 
 close(file_conn)
 </code></pre>
-<p>Now go into command line/terminal and navigate to the directory where your text file is and run the following in the terminal:</p>
+<p>Now go into command line/terminal (you can use the Terminal tab in RStudio) and navigate to the directory where your text file is and run the following in the terminal:</p>
 <pre><code>wget -i NEONmetagenome_downloadIDs.txt
 </code></pre>
 <p>The gzipped fastq files will download to whichever directory you are in. this will work both locally and on an HPC.</p>
